2006-06-11 [colin]	2.2.3cvs11

	* src/wizard.c
		Add Face header to welcome mail

2006-06-10 [colin]	2.2.3cvs10

	* src/textview.c
		Revert previous (Forgot it changes the
		margin on the whole mail)

2006-06-10 [colin]	2.2.3cvs9

	* src/textview.c
		Don't overlap long headers under (X-)Face

2006-06-10 [mones]	2.2.3cvs8

	* manual/xml2pdf
		allow generation of manual on systems lacking saxon binary
		but with java and the saxon library installed

	* po/es.po
		updated for release

2006-06-09 [colin]	2.2.3cvs7

	* src/summaryview.c
		Fix leak when using Display Sender using Addressbook

2006-06-09 [colin]	2.2.3cvs6

	* src/compose.c
	* src/folder.c
	* src/folderview.c
	* src/mimeview.c
	* src/summaryview.c
		More leaks fixes

2006-06-09 [paul]	2.2.3cvs5

	* AUTHORS
	* src/gtk/authors.h
	* tools/claws.i18n.status.pl
		updated with new info

2006-06-09 [paul]	2.2.3cvs4

	* README
		updated
	* manual/ack.xml
		add wwp to authors list
	* src/gtk/authors.h
		update mine and Colin's addresses

2006-06-08 [colin]	2.2.3cvs3

	* src/etpan/imap-thread.c
		Fix leak on SSL cert check

2006-06-08 [colin]	2.2.3cvs2

	* src/common/utils.c
		Fix leak

2006-06-08 [paul]	2.2.3cvs1

	* configure.ac
		Update version number following
		stable release

2006-06-07 [colin]	2.2.2cvs3

	* src/msgcache.c
		Fix catching cache read errors (guint instead of gint)
		Prevent malloc'ing more than 8MB (means cache corruption)

2006-06-07 [paul]	2.2.2cvs2

	* src/exporthtml.c
	* src/exportldif.c
	* src/mh.c
	* src/mutt.c
	* src/pine.c
	* src/common/utils.c
		fix Debian bug #370257, 'sylpheed-claws-gtk2 does not
		obey $HOME'
		http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=370257
		Thanks to Colin

2006-06-06 [paul]	2.2.2cvs1

	* configure.ac
		Update version number following
		stable release

2006-06-06 [paul]	2.2.1cvs6

	* src/matcher.c
		fix  implicit declaration of
		sylpheed_do_idle()
		Patch by Fabien Vantard

2006-06-06 [paul]	2.2.1cvs5

	* src/matcher.c