@@ -1572,3 +1572,4 @@
 ( cvs diff -u -r 1.96.2.115 -r 1.96.2.116 src/textview.c;  ) > 2.2.3cvs9.patchset
 ( cvs diff -u -r 1.96.2.116 -r 1.96.2.117 src/textview.c;  ) > 2.2.3cvs10.patchset
 ( cvs diff -u -r 1.1.2.31 -r 1.1.2.32 src/wizard.c;  ) > 2.2.3cvs11.patchset
+( cvs diff -u -r 1.16.2.32 -r 1.16.2.33 src/msgcache.c;  ) > 2.2.3cvs12.patchset
