@@ -1,3 +1,8 @@
+2006-06-11 [colin]	2.2.3cvs12
+
+	* src/msgcache.c
+		Verify that g_malloc() succeeded
+
 2006-06-11 [colin]	2.2.3cvs11
 
 	* src/wizard.c
